workspace = { members = ["src/encryption"] }
[package]
name = "gciphers-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4" }
encryption = { path = "src/encryption"}

[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]
