[package]
name = "encryption"
version = "0.1.0"
edition = "2021"
license = "GPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
num = "0.4.1"
itertools = "0.12.1"
rand = "0.8.5"
primes = "0.3.0"
regex = "1.10.3"
primitive-types = "0.12.2"
